add sources comfig in pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -78,4 +78,19 @@
 		</dependency>
 
 	</dependencies>
+	<!-- 再加入springboot的maven插件 -->
+	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
